--- a/MinhaApiComSQLite/appsettings.json
+++ b/MinhaApiComSQLite/appsettings.json
@@ -8,7 +8,10 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "DefaultConnection": "Data Source=produtos.db"
+  },
+  "Jwt": {
+    "Key": "",
+    "Issuer": "MinhaApiComSQLite",
+    "Audience": "MinhaApiComSQLite"
   }
 }
-
-
